--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,6 +1,9 @@
-@import url("https://fonts.googleapis.com/css?family=Poppins:500,700");
+@import url("https://fonts.googleapis.com/css?family=Poppins:500,600");
 
 .header-section {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
   background-image: url(../../img/header-main.png);
   background-size: contain;
   background-repeat: no-repeat;
@@ -12,4 +15,20 @@
 .no-pad {
   padding: 0 !important;
   overflow: hidden;
+}
+
+h1.header-text {
+  font-family: 'Poppins', sans-serif;
+  font-weight: 600;
+  font-size: 3rem;
+  text-transform: uppercase;
+  color: #fff;
+}
+
+h3.header-text{
+  font-family: 'Poppins', sans-serif;
+  font-weight: 500;
+  text-transform: uppercase;
+  letter-spacing: 10px;
+  color: #fff;
 }
