--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Poppins:500,600");
+@import url("https://fonts.googleapis.com/css?family=Poppins:300,500,600");
 
 .header-section {
   display: flex;
@@ -7,9 +7,9 @@
   background-image: url(../../img/header-main.png);
   background-size: contain;
   background-repeat: no-repeat;
-  background-position: fixed;
+  background-position: center;
   background-color: #fff !important;
-  height: 92vh;
+  height: 90vh;
 }
 
 .no-pad {
@@ -20,7 +20,7 @@
 h1.header-text {
   font-family: "Poppins", sans-serif;
   font-weight: 600;
-  font-size: 3rem;
+  font-size: 4rem;
   text-transform: uppercase;
   color: #fff;
 }
@@ -31,4 +31,53 @@ h3.header-text {
   text-transform: uppercase;
   letter-spacing: 10px;
   color: #fff;
+}
+
+h4.header-text {
+  font-family: "Poppins", sans-serif;
+  text-transform: uppercase;
+  font-weight: 300;
+  letter-spacing: 4px;
+  color: #fff;
+}
+
+@media only screen and (max-width: 1200px) {
+  .header-section {
+    height: 70vh;
+  }
+}
+
+@media only screen and (max-width: 1000px) {
+  .header-section {
+    height: 60vh;
+  }
+  .header-container {
+    width: 100% !important;
+    max-width: 75% !important;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .header-section {
+    background-image: url(../../img/mobile-header.png);
+    background-size: cover;
+    height: 80vh;
+  }
+  h1.header-text {
+    font-size: 3rem;
+    text-align: left !important;
+  }
+  h3.header-text {
+    text-align: left !important;
+    letter-spacing: 5px;
+  }
+  h4.header-text {
+    text-align: left !important;
+  }
+}
+
+@media only screen and (max-width: 668px) {
+  .header-section {
+    height: 80vh;
+  }
 }
