--- a/src/components/portfolio/items/expanded/expanded.css
+++ b/src/components/portfolio/items/expanded/expanded.css
@@ -1,15 +1,24 @@
 .full-screen {
-    display: flex;
-    position: fixed;
-    height: 100%;
-    width: 100%;
-    top: 0;
-    left: 0;
-    background-color: black;
-    z-index: 100;
+  display: flex;
+  position: absolute;
+  height: 200%;
+  width: 100%;
+  top: 0;
+  left: 0;
+  background-color: rgba(255, 255, 255, 0.95);
+  z-index: 100;
+}
+
+h1 {
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
+  font-size: 2rem;
+}
+
+h1 strong {
+  font-weight: 800;
 }
 
 .fit-content {
-    text-align: center;
-    height: fit-content;
+  text-align: center;
 }
