--- a/src/components/portfolio/items/expanded/expanded.css
+++ b/src/components/portfolio/items/expanded/expanded.css
@@ -16,6 +16,10 @@ h1 {
   font-size: 2rem;
 }
 
+h1.bottom-link {
+  font-size: 1.8rem;
+}
+
 h1 strong {
   font-weight: 800;
 }
@@ -28,6 +32,9 @@ h3.ocgHeader {
   font-family: "Poppins", sans-serif;
   font-weight: 300;
   text-align: center;
+  color: #787878;
+  padding-top: 25px;
+  margin-bottom: -10px;
 }
 
 a {
@@ -43,4 +50,22 @@ a:focus,
 a:active {
   color: #f2696b;
   text-decoration: none !important;
+}
+
+.pad-b3 {
+  padding-bottom: 30px;
+}
+
+/*------ close button --------*/
+
+.clickClose {
+  font-family: "Poppins", sans-serif;
+  font-size: 1.2rem;
+  font-weight: 300;
+  letter-spacing: 5px;
+  background: none;
+  border: none;
+  color: #787878;
+  cursor: pointer;
+  text-align: center;
 }
