Added padding and other infomation

--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -12,3 +12,11 @@
 .pad-b3 {
   padding-bottom: 3%;
 }
+
+/*
+.padding-lr {
+  padding-left: 3.5%;
+  padding-right: 3.5%;
+  margin: 0 !important;
+}
+*/
