--- a/src/components/portfolio/items/expanded/expanded.css
+++ b/src/components/portfolio/items/expanded/expanded.css
@@ -52,6 +52,11 @@ a:active {
   text-decoration: none !important;
 }
 
+p {
+  font-family: sans-serif;
+  text-transform: none;
+}
+
 .pad-b3 {
   padding-bottom: 30px;
 }
