--- a/src/components/portfolio/items/items.css
+++ b/src/components/portfolio/items/items.css
@@ -3,6 +3,7 @@
   width: 100%;
   height: 300px;
   align-items: center;
+  text-align: center;
   justify-content: center;
   background-size: cover;
   background-color: #f0696a;
@@ -43,4 +44,3 @@
 .itemBox8 {
   background-image: url(../../../img/smallImg/calling-all-artist-small.jpg);
 }
-
