--- a/src/components/nav.scss
+++ b/src/components/nav.scss
@@ -6,10 +6,16 @@
 }
 
 .nav__logo-container {
-  position: relative;
+  display: flex;
+  width: 100%;
+  justify-content: center;
   svg {
     position: absolute;
   }
+}
+
+.logos {
+  position: relative;
 }
 
 .logo1 {
