--- a/src/global.scss
+++ b/src/global.scss
@@ -1,5 +1,11 @@
+body {
+  background-color: #000;
+  padding: 0;
+  margin: 0;
+}
 .container {
   max-width: 1440px;
   margin: 0 auto;
   padding: 0 20px;
+  width: 100%;
 }
