--- a/src/components/homepage-header.scss
+++ b/src/components/homepage-header.scss
@@ -2,7 +2,7 @@
 
 .homepage-header {
   display: flex;
-  height: calc(100vh - 120px);
+  height: calc(100vh - 150px);
 }
 
 .homepage-header__container {
@@ -10,6 +10,14 @@
   height: 80%;
   justify-content: center;
   align-items: center;
+  .titles {
+    display: flex;
+    width: 100%;
+    height: 50%;
+    justify-content: center;
+    align-items: center;
+    background-color: palevioletred;
+  }
 }
 
 .homepage-header__title {
