--- a/src/components/homepage-header.scss
+++ b/src/components/homepage-header.scss
@@ -16,7 +16,6 @@
     height: 50%;
     justify-content: center;
     align-items: center;
-    background-color: palevioletred;
   }
 }
 
@@ -26,9 +25,11 @@
   position: absolute;
   &.--red {
     color: $color-red;
+    transform: translate(-3px, 3px);
   }
   &.--blue {
     color: $color-blue;
+    transform: translate(3px, -3px);
   }
   &.--white {
     color: $color-white;
