--- a/src/components/homepage-header.scss
+++ b/src/components/homepage-header.scss
@@ -1,4 +1,5 @@
 @import '../variables.scss';
+@import 'include-media/dist/include-media';
 
 .homepage-header {
   display: flex;
@@ -7,6 +8,7 @@
 
 .homepage-header__container {
   display: flex;
+  flex-direction: column;
   height: 80%;
   justify-content: center;
   align-items: center;
@@ -23,6 +25,7 @@
   font-family: 'Poppins', sans-serif;
   font-size: rem(100px);
   position: absolute;
+  text-align: center;
   &.--red {
     color: $color-red;
     transform: translate(-3px, 3px);
@@ -34,5 +37,46 @@
   &.--white {
     color: $color-white;
     z-index: 1;
+  }
+  @include media('<1200px') {
+    font-size: rem(70px);
+  }
+  @include media('<768px') {
+    font-size: rem(60px);
+  }
+}
+
+.homepage-header__projects {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-family: 'Roboto Mono';
+  a {
+    font-size: rem(15px);
+    color: $color-white;
+    text-decoration: none;
+    padding: 15px 0;
+  }
+  p {
+    font-size: rem(20px);
+    color: $color-white;
+  }
+  &:hover {
+    .arrow {
+      animation: arrowDown 2s infinite;
+    }
+  }
+}
+
+// Keyframes 
+@keyframes arrowDown {
+  0% {
+    transform: none;
+  }
+  50% {
+    transform: translateY(10px);
+  }
+  100% {
+    transform: none;
   }
 }
