fix math on header hero. add images for cards. Add project cards and styling

--- a/src/assets/scss/contact.scss
+++ b/src/assets/scss/contact.scss
@@ -1,4 +1,4 @@
-@import '../variables.scss';
+@import '../../variables.scss';
 .contact {
   font-family: 'Roboto Mono', sans-serif;
   display: flex;
