--- a/src/assets/scss/contact.scss
+++ b/src/assets/scss/contact.scss
@@ -9,6 +9,7 @@
     color: $color-white;
     font-size: rem(20px);
     padding-bottom: 20px;
+    text-align: center;
   }
   .contact__links {
     a {
