--- a/src/global.scss
+++ b/src/global.scss
@@ -13,6 +13,16 @@ body {
   margin: 0;
   animation: bgAnimation 10s infinite;
 }
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+p {
+  line-height: 1.6 !important;
+}
+
 .container {
   max-width: 1440px;
   margin: 0 auto;
