--- a/src/global.scss
+++ b/src/global.scss
@@ -7,7 +7,7 @@
 
 body {
   background-color: #000;
-  background-image: url('./assets/bg-tile.png');
+  background-image: url('/images/bg-tile.png');
   background-repeat: repeat;
   padding: 0;
   margin: 0;
