--- a/src/assets/scss/project.scss
+++ b/src/assets/scss/project.scss
@@ -33,7 +33,9 @@
   text-transform: uppercase;
   margin: rem(5px) 0;
   line-height: 1;
-  word-break: break-all;
+  @include media('<=768px') {
+    word-break: break-all;
+  }
 }
 
 .project__subhead {
